# Coursework_2_and_3-Job-search

./: .gitignore  Coursework_2.md  Coursework_3.md  README.md  main.py  pyproject.toml
config/: config.py  database.ini.example
data/: vacancies.csv  vacancies.json
htmlcov/: coverage_index.html  function_index.html  index.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_apies_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: apies.py  db_manager.py  reports.py  vacancy.py
tests/: conftest.py  test_apies.py  test_reports.py  test_vacancy.py
